--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { frontmatter } = Astro.props;
   </head>
   <body>
     <Header></Header>
-    <main class="container mx-auto max-w-xl px-4 mb-14">
+    <main class="container mx-auto max-w-xl px-4 mb-14 min-h-screen">
       <MarkDown>
         <slot />
       </MarkDown>
