--- a/src/components/Box.astro
+++ b/src/components/Box.astro
@@ -1,6 +1,12 @@
 ---
-
+import Image from "./Image.astro";
 ---
-<div class="bg-gray-300  p-4 -mx-4">
-<slot />
+
+<div class="bg-gray-300 -mx-4 flex gap-4">
+  <div class="flex-1">
+    <Image filename="portrait.jpg" alt="Uli Doll" />
+  </div>
+  <div class="flex-1 m-4 text-sm">
+    <slot />
+  </div>
 </div>
