--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-const { default: innerHTML } = await import(`/logo.svg?raw`);
+const { default: innerHTML } = await import(`./logo.svg?raw`);
 ---
 
 <div class="bg-darkgreen p-4">
