--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,9 @@ const { default: innerHTML } = await import(`./logo.svg?raw`);
 ---
 
 <div class="bg-darkgreen p-4">
-  <div style="max-width: 250px;" class="pt-4 mx-auto">
-    <Fragment set:html={innerHTML} />
-  </div>
+  <a href="/">
+    <div style="max-width: 250px;" class="pt-4 mx-auto">
+      <Fragment set:html={innerHTML} />
+    </div>
+  </a>
 </div>
