--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -9,7 +9,7 @@
     display: grid;
     grid-auto-flow: column;
     gap: 1rem;
-    height: calc(250px + 1rem);
+    height: calc(250px);
     max-width: 480px;
     overflow-y: auto;
     overscroll-behavior-x: contain;
