--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,11 +2,11 @@
 const posts = await Astro.glob("../pages/*.mdx"); // returns an array of posts that live at ./src/pages/post/*.md
 ---
 
-<div class="bg-neongreen text-center p-4">
+<div class="bg-neongreen text-sm text-center p-4 flex flex-wrap justify-center">
   {
     posts
       .map((post) => (
-        <a class="px-2" href={post.url || '/'}>{post.frontmatter.title}</a>
+        <a class="px-2 " href={post.url || '/'}>{post.frontmatter.title}</a>
       ))
   }
 </div>
