--- a/src/components/Box.astro
+++ b/src/components/Box.astro
@@ -6,7 +6,7 @@ const { filename, alt } = Astro.props;
 
 ---
 
-<div class="bg-gray-200 -mx-4 flex gap-4">
+<div class="bg-gray-200 container mx-auto max-w-2xl flex gap-4 ">
   <div class="flex-1 bg-white">
 
     <Picture
