--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,8 @@
 ---
-
 ---
 
-<h1 class="bg-neongreen p-4 -mx-4">
-  <slot/>
-</h1>
+<div class="bg-neongreen">
+  <h1 class="container text-lg mx-auto max-w-xl p-4">
+    <slot />
+  </h1>
+</div>
