--- a/src/components/Feedback.astro
+++ b/src/components/Feedback.astro
@@ -2,7 +2,7 @@
 const { author } = Astro.props;
 ---
 
-<div class="bg-neongreen text-center p-4 mb-8">
+<div class="bg-neongreen bg-opacity-70 container mx-auto max-w-2xl rounded-2xl text-center p-4 mb-8">
   <quote class="italic"><slot /></quote>
   {author && <p class="text-sm">{author}</p>}
 </div>
