--- a/src/components/MarkDown.astro
+++ b/src/components/MarkDown.astro
@@ -7,8 +7,13 @@
   @tailwind components;
   @tailwind utilities;
 
-  .main {
+  .main > {
     @layer components {
+
+      p, h1, h2, h3, h4, h5, ul {
+        @apply container mx-auto max-w-xl px-4;
+      }  
+
       p {
         @apply  pt-2 font-light pb-4;
       } 
@@ -26,7 +31,7 @@
       }
 
       ul {
-        @apply my-3 ml-5 mb-8;
+        @apply  mb-8;
       }
 
       li {
