--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -1,19 +1,23 @@
 ---
-import data from './reviews.json';
+import data from "./reviews.json";
 ---
 
-
-{data.body.map((item) => (
-  
-  <a href="#" class="block p-6  mb-6 bg-white rounded-lg border border-gray-200 ">
-    <h3 class="mb-2 font-bold tracking-tight text-gray-900">
-      👍 {item.text}
-    </h3>
-    <div class="my-1 py-0 text-sm">
-      { item.reviewer_name } am {new Date(item.written_at).toLocaleDateString('de-de')}
-    </div>
-    <div class="font-normal text-sm text-gray-400">
-      🛠️ {item.job_title} 
-    </div>
-  </a>
-))}
+<div class="container mx-auto max-w-xl">
+  {
+    data.body.map((item) => (
+      <a
+        href="#"
+        class="block p-6  mb-6 bg-white rounded-lg border border-gray-200 "
+      >
+        <h3 class="mb-2 font-bold tracking-tight text-gray-900">
+          👍 {item.text}
+        </h3>
+        <div class="my-1 py-0 text-sm">
+          {item.reviewer_name} am{" "}
+          {new Date(item.written_at).toLocaleDateString("de-de")}
+        </div>
+        <div class="font-normal text-sm text-gray-400">🛠️ {item.job_title}</div>
+      </a>
+    ))
+  }
+</div>
