--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 const { default: innerHTML } = await import(`./logo.svg?raw`);
 ---
 
-<div class="bg-darkgreen p-4">
+<div class="bg-gray-900 p-4">
   <a href="/" title="HAUSWERK Köln - Handwerkliche Dienstleistungen">
     <div style="max-width: 250px;" class="pt-4 mx-auto">
       <Fragment set:html={innerHTML} />
