--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,17 +1,25 @@
 ---
 const posts = await Astro.glob("../pages/*.mdx"); // returns an array of posts that live at ./src/pages/post/*.md
 const { default: innerHTML } = await import(`./dach.svg?raw`);
+
+const navLinks = posts.filter((element) => {
+  return element.frontmatter.navHide !== true;
+});
+
+const navLinksSorted = navLinks.sort((a, b) => {
+  return a.frontmatter.navPosition > b.frontmatter.navPosition ? 0 : -1;
+});
 ---
 
-<div class="bg-neongreen ">
+<div class="bg-neongreen">
   <div class="text-sm text-center py-6 flex flex-wrap justify-center">
-  {
-    posts.map((post) => (
-      <a class="px-2 " href={post.url || "/"}>
-        {post.frontmatter.title}
-      </a>
-    ))
-  }
+    {
+      navLinksSorted.map((post) => (
+        <a class="px-2 " href={post.url || "/"}>
+          {post.frontmatter.navTitle}
+        </a>
+      ))
+    }
   </div>
   <div class="flex flex-wrap justify-center py-8">
     <Fragment set:html={innerHTML} />
