--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,16 @@
 import ToggleMenu from "./ToggleMenu.astro";
 
 const { default: innerHTML } = await import(`./logo.svg?raw`);
+
+const posts = await Astro.glob("../pages/*.mdx"); // returns an array of posts that live at ./src/pages/post/*.md
+
+const navLinks = posts.filter((element) => {
+  return element.frontmatter.navHide !== true && element.frontmatter.navHeader === true;
+});
+
+const navLinksSorted = navLinks.sort((a, b) => {
+  return a.frontmatter.navPosition > b.frontmatter.navPosition ? 0 : -1;
+});
 ---
 
 <div class="bg-gray-900 pb-4 md:pb-0">
@@ -20,32 +30,26 @@ const { default: innerHTML } = await import(`./logo.svg?raw`);
       <div class="flex items-center"></div>
     </div>
     <nav
-      class=" md:w-auto hidden md:flex text-gray-600 dark:text-slate-200 h-screen md:h-auto"
+      class="md:w-auto hidden md:flex text-gray-600 dark:text-slate-200 h-screen md:h-auto"
       aria-label="Main navigation"
       id="menu"
     >
       <ul
         class="flex justify-center flex-col pt-8 md:pt-0 md:flex-row md:self-center collapse w-full collapsed text-xl md:text-base"
       >
-      <li>
-        <a
-          class="font-medium hover:text-gray-900 dark:hover:text-white px-4 py-3 flex items-center transition duration-150 ease-in-out"
-          href="/">Startseite</a
-        >
-      </li>
-      <li>
-          <a
-            class="font-medium hover:text-gray-900 dark:hover:text-white px-4 py-3 flex items-center transition duration-150 ease-in-out"
-            href="/bewertungen">Bewertungen</a
-          >
-        </li>
-        <li>
-          <a
-            class="font-medium hover:text-gray-900 dark:hover:text-white px-4 py-3 flex items-center transition duration-150 ease-in-out"
-            href="/kontakt"
-            >Kontakt
-          </a>
-        </li>
+        {
+          navLinksSorted.map((post) => (
+            <li>
+              <a
+                href={post.url || "/"}
+                class="font-medium hover:text-gray-900 dark:hover:text-white px-4 py-3 flex items-center transition duration-150 ease-in-out"
+              >
+                {post.frontmatter.navTitle}
+              </a>
+            </li>
+          ))
+        }
+
       </ul>
       <div class="md:self-center flex items-center mb-4 md:mb-0 ml-2"></div>
     </nav>
