--- a/src/components/MarkDown.astro
+++ b/src/components/MarkDown.astro
@@ -24,15 +24,15 @@
       }
 
       h1 {
-        @apply text-xl text-darkgreen pt-4 pb-2;
+        @apply text-xl font-medium text-gray-900 pt-4 pb-2;
       }
 
       h2 {
-        @apply text-xl font-medium leading-5 text-darkgreen pt-8 pb-2;
+        @apply text-lg font-medium leading-5 text-gray-900 pt-8 pb-2;
       }
 
       h3 {
-        @apply text-base text-darkgreen pt-4 pb-2;
+        @apply font-medium text-gray-900 pt-4 pb-2;
       }
 
       ul {
