feat: import ratings

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,14 +14,14 @@ const navLinksSorted = navLinks.sort((a, b) => {
 });
 ---
 
-<div class="bg-gray-900 pb-4 md:pb-0">
+<div class="bg-green-800 pb-4 md:pb-0">
   <a href="/" title="HAUSWERK Köln - Handwerkliche Dienstleistungen">
-    <div style="max-width: 250px;" class="pt-4 mx-auto">
+    <div style="max-width: 300px;" class="pt-4 mx-auto">
       <Fragment set:html={innerHTML} />
     </div>
   </a>
 
-  <div class="md:hidden absolute top-5 right-5">
+  <div class="md:hidden absolute top-2 right-0">
     <ToggleMenu />
   </div>
 
