--- a/src/components/ToggleMenu.astro
+++ b/src/components/ToggleMenu.astro
@@ -10,7 +10,7 @@ const {
 ---
 
 <button type="button" class={className} aria-label={label} data-aw-toggle-menu>
-  <Icon name={iconName} class={iconClass} optimize={false} />
+  Menü <Icon name={iconName} class={iconClass} optimize={false} />
 </button>
 
 <style is:global>
